# rust-web-postgres-crudl

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
.sqlx/: query-0157bb13a45cae8ee421000867adab2a90a1ffbad06ba9fb416de21335896858.json  query-0a695aecf9754b30574f9dc1a793dd21f402397220d050850dd5be88b43caf3b.json  query-8b3bf56cab189a33b6ed2baa2fe0ca56665f21c232cff707a1e4c3d03ae45239.json  query-8be9cbf89d026224f71ddfd3ed765b344a3e65fcc1f9b9eea68a0dc8622fcd52.json  query-e1939a363308222e156259cf6afc64aa10a6f0025a53dc8f3f9e0cf8afe5cf72.json  query-ff013f6385dd1b22685bb67cb3747f726b28092b04a87d9c5384547069473fd5.json
migrations/: 0001_create_books.sql  0002_add_image_path.sql  0003_actualizar_imagenes.sql  0004_create_comments.sql
src/: db.rs  main.rs
src/handlers/: api_handlers.rs  web_handlers.rs
src/models/: models.rs
src/routes/: api_routes.rs  web_routes.rs
templates/: base.html  book_create.html  book_detail.html  book_edit.html  book_list.html  index.html
