[package]
name = "web-postgres-crudl"
version = "0.1.0"
authors = ["ffespechen <flavio.espechenieva@gmail.com>"]
edition = "2024"

[dependencies]
# Condicional según la base de datos elegida por el usuario

sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "uuid"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
# Framerwork y ejecución asíncrona: axum y tokio
# Crates para manejo de fechas: chrono
# Crates para manejo de plantillas: askama
# Utilidades para manejo de variables de entorno: dotenvy
# Crates para manejo de datos: serde, serde_json
# Utilidades para servir archivos estáticos y manejo de CORS: tower-http
askama = { version="0.15.4", features = ["full"] }
axum = {version = "0.8.8", features = [ "multipart"]}
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
uuid = { version="1.20.0", features = ["serde", "v4"] }
